--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,5 +1,6 @@
 # Node
 node_modules/
+backend/node_modules/
 
 # Builds
 dist/
@@ -8,6 +9,7 @@ build/
 .cache/
 
 # Logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -16,10 +18,16 @@ pnpm-debug.log*
 # OS
 .DS_Store
 Thumbs.db
+.vscode/
+.idea/
 
 # Env
 .env
+backend/.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Cache
+.cache/
