--- a/backend/package.json
+++ b/backend/package.json
@@ -18,10 +18,12 @@
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "moongose": "^1.0.0",
+    "mongoose": "^8.1.3",
     "multer": "^2.0.1",
+    "nodemailer": "^7.0.5",
+    "pdfkit": "^0.17.1",
     "streamifier": "^0.1.1",
     "validator": "^13.15.15"
   },
